force-app/src/objects/TR1__ATS_New_Stage_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__ATS_Flow_Settings__c</fullName>
        <label>ATS Flow Settings</label>
        <referenceTo>TR1__ATSFlowSettings__mdt</referenceTo>
        <relationshipLabel>ATS New Stage Configs</relationshipLabel>
        <relationshipName>ATS_New_Stage_Configs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TR1__Action_type__c</fullName>
        <label>Action type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lightning_Component</fullName>
                </value>
                <value>
                    <fullName>Field_Set</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Application_Fields_Data__c</fullName>
        <description>Long Text field specifying the static application fields/value pairs. The fields will be populated after a successful action. This data should be stored in a JSON format. The Field API Name is case-sensitive and should match the value shown in SF Object Manager.</description>
        <inlineHelpText>Long Text field specifying the static application fields/value pairs. The fields will be populated after a successful action. This data should be stored in a JSON format. The Field API Name is case-sensitive and should match the value shown in SF Object Manager.</inlineHelpText>
        <label>Application Fields Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Directions_To_Call__c</fullName>
        <description>The field determines the directions in which the call of the custom action handlers will occur (ATS views only)</description>
        <inlineHelpText>The field determines the directions in which the call of the custom action handlers will occur (ATS views only)</inlineHelpText>
        <label>Directions To Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Forward Only</fullName>
                    <default>true</default>
                    <label>Forward Only</label>
                </value>
                <value>
                    <fullName>Forward And Backward</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__FieldSetName__c</fullName>
        <label>Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__StageName__c</fullName>
        <description>When selecting configurations for processing custom stages, stage label is used in priority, if there are two similar records where the value is Stage Label and Stage API Name.</description>
        <label>StageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Standard_stage_for_multiple_Selection__c</fullName>
        <description>Determines the to-be executed standard stage when a user selects more than 1 applicant. Use this setting when the overridden stage modal does not support multiple selection.</description>
        <inlineHelpText>Determines the to-be executed standard stage when a user selects more than 1 applicant. Use this setting when the overridden stage modal does not support multiple selection.</inlineHelpText>
        <label>Standard stage for multiple Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Interview</fullName>
                </value>
                <value>
                    <fullName>Submittal</fullName>
                </value>
                <value>
                    <fullName>Send Out</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Closing Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ATS New Stage Config</label>
    <pluralLabel>ATS New Stage Configs</pluralLabel>
</CustomObject>